tests/snapshots/integration__integration_tests__list__json_with_user_status.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--format=json"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpPlVPx6/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "head_sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
    "branch": "main",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "has_conflicts": false,
    "status_symbols": {
      "has_conflicts": false,
      "has_potential_conflicts": false,
      "branch_state": "",
      "git_operation": "",
      "worktree_attrs": "",
      "main_divergence": "",
      "upstream_divergence": "",
      "working_tree": "",
      "user_status": null
    },
    "type": "worktree",
    "path": "[REPO]",
    "bare": false,
    "detached": false,
    "locked": null,
    "prunable": null,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_primary": true
  },
  {
    "head_sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
    "branch": "with-status",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "has_conflicts": false,
    "user_status": "🔧",
    "status_symbols": {
      "has_conflicts": false,
      "has_potential_conflicts": false,
      "branch_state": "≡",
      "git_operation": "",
      "worktree_attrs": "",
      "main_divergence": "",
      "upstream_divergence": "",
      "working_tree": "",
      "user_status": "🔧"
    },
    "type": "worktree",
    "path": "[WORKTREE_WITH_STATUS]",
    "bare": false,
    "detached": false,
    "locked": null,
    "prunable": null,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_primary": false
  },
  {
    "head_sha": "b834638e33dbc6b37002685ee0777f4b8f1af904",
    "branch": "without-status",
    "timestamp": 0,
    "commit_message": "Initial commit",
    "ahead": 0,
    "behind": 0,
    "branch_diff": {
      "added": 0,
      "deleted": 0
    },
    "upstream_remote": null,
    "upstream_ahead": 0,
    "upstream_behind": 0,
    "pr_status": null,
    "has_conflicts": false,
    "status_symbols": {
      "has_conflicts": false,
      "has_potential_conflicts": false,
      "branch_state": "≡",
      "git_operation": "",
      "worktree_attrs": "",
      "main_divergence": "",
      "upstream_divergence": "",
      "working_tree": "",
      "user_status": null
    },
    "type": "worktree",
    "path": "[WORKTREE_WITHOUT_STATUS]",
    "bare": false,
    "detached": false,
    "locked": null,
    "prunable": null,
    "working_tree_diff": {
      "added": 0,
      "deleted": 0
    },
    "working_tree_diff_with_main": {
      "added": 0,
      "deleted": 0
    },
    "worktree_state": null,
    "is_primary": false
  }
]

----- stderr -----
