tests/snapshots/integration__integration_tests__list__large_diffs_alignment.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpNI9BWQ/test-config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[1mBranch[0m           [1mStatus[0m            [1mHEAD±[0m  [1mmain↕[0m  [1mPath[0m               [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m            [1mMessage[0m
[1m[35mmain[0m                                             [1m[35m./test-repo[0m                 [2mb834638e[0m  [2m10 months ago[0m  [2mInitial commit[0m
diverged         [36m![0m         ↑ 💬  [32m+40[0m [31m-60[0m  [32m↑1[0m     ./diverged                  [2m8ba5aa92[0m  [2m10 months ago[0m  [2mDiverged commit[0m
feature-changes  [36m?![0m        ↑ 🤖  [32m+50[0m [1m[31m-1C[0m  [32m↑1[0m     ./feature-changes           [2mb854b166[0m  [2m10 months ago[0m  [2mAdd 100 lines[0m
[2mfix[0m              [36m?[0m     [2m≡[0m     💬                  [2m./fix[0m                       [2mb834638e[0m  [2m10 months ago[0m  [2mInitial commit[0m

⚪ [2mShowing 4 worktrees, 2 with changes, 2 ahead[0m
